# turing2

./: .gitignore  README.md  clean.script  configure.ac  run.script  turing.c  turing2.sln
c/: BUILD.txt  Makefile  Makefile.am  turing.c  turing2.vcxproj
c/codeblocks/: codeblocks.cbp
